Add the Add book section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       </svg>
       <p>Bookify</p>
     </div>
+    <div class="main-body">
+      <!-- Add section -->
+      <div class="addSection">
+        <p>Welcome to Bookify,</p>
+        <p>Click the "ADD NEW BOOK" button to add a new book. </p>
+        <button class="addBookPopup">Add New Book</button>
+      </div>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
