Design the basic card layouts

--- a/index.html
+++ b/index.html
@@ -19,8 +19,163 @@
       <!-- Add section -->
       <div class="addSection">
         <p>Welcome to Bookify,</p>
-        <p>Click the "ADD NEW BOOK" button to add a new book. </p>
-        <button class="addBookPopup">Add New Book</button>
+        <p>Click the "ADD NEW BOOK" button to add a new book.</p>
+        <button class="addBookPopup">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg
+          >Add New Book
+        </button>
+      </div>
+      <!-- Display section -->
+      <div class="displaySection">
+        <div class="header">
+          <p>View Added Books</p>
+        </div>
+        <div id="output-div">
+          <div id="card">
+            <p id="card-name">How to get better at coding.</p>
+            <hr />
+            <p id="card-author">Ukandu Giddel</p>
+            <p id="read-status">This book has NOT BEEN read</p>
+            <div id="actions">
+              <button id="delete-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path
+                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                  />
+                </svg>
+                Delete
+              </button>
+              <button id="toggle-button">Toggle read status</button>
+            </div>
+          </div>
+
+           <div id="card">
+            <p id="card-name">How to get better at coding.</p>
+            <hr />
+            <p id="card-author">Ukandu Giddel</p>
+            <p id="read-status">This book has NOT BEEN read</p>
+            <div id="actions">
+              <button id="delete-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path
+                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                  />
+                </svg>
+                Delete
+              </button>
+              <button id="toggle-button">Toggle read status</button>
+            </div>
+          </div>
+
+           <div id="card">
+            <p id="card-name">How to get better at coding.</p>
+            <hr />
+            <p id="card-author">Ukandu Giddel</p>
+            <p id="read-status">This book has NOT BEEN read</p>
+            <div id="actions">
+              <button id="delete-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path
+                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                  />
+                </svg>
+                Delete
+              </button>
+              <button id="toggle-button">Toggle read status</button>
+            </div>
+          </div>
+
+           <div id="card">
+            <p id="card-name">How to get better at coding.</p>
+            <hr />
+            <p id="card-author">Ukandu Giddel</p>
+            <p id="read-status">This book has NOT BEEN read</p>
+            <div id="actions">
+              <button id="delete-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path
+                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                  />
+                </svg>
+                Delete
+              </button>
+              <button id="toggle-button">Toggle read status</button>
+            </div>
+          </div>
+
+           <div id="card">
+            <p id="card-name">How to get better at coding.</p>
+            <hr />
+            <p id="card-author">Ukandu Giddel</p>
+            <p id="read-status">This book has NOT BEEN read</p>
+            <div id="actions">
+              <button id="delete-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path
+                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                  />
+                </svg>
+                Delete
+              </button>
+              <button id="toggle-button">Toggle read status</button>
+            </div>
+          </div>
+
+           <div id="card">
+            <p id="card-name">How to get better at coding.</p>
+            <hr />
+            <p id="card-author">Ukandu Giddel</p>
+            <p id="read-status">This book has NOT BEEN read</p>
+            <div id="actions">
+              <button id="delete-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path
+                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                  />
+                </svg>
+                Delete
+              </button>
+              <button id="toggle-button">Toggle read status</button>
+            </div>
+          </div>
+
+           <div id="card">
+            <p id="card-name">How to get better at coding.</p>
+            <hr />
+            <p id="card-author">Ukandu Giddel</p>
+            <p id="read-status">This book has NOT BEEN read</p>
+            <div id="actions">
+              <button id="delete-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path
+                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                  />
+                </svg>
+                Delete
+              </button>
+              <button id="toggle-button">Toggle read status</button>
+            </div>
+          </div>
+
+           <div id="card">
+            <p id="card-name">How to get better at coding.</p>
+            <hr />
+            <p id="card-author">Ukandu Giddel</p>
+            <p id="read-status">This book has NOT BEEN read</p>
+            <div id="actions">
+              <button id="delete-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path
+                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                  />
+                </svg>
+                Delete
+              </button>
+              <button id="toggle-button">Toggle read status</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/index.js"></script>
