Update the card design

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
           <div id="card">
             <p id="card-name">How to get better at coding.</p>
             <hr />
-            <p id="card-author">Ukandu Giddel</p>
-            <p id="read-status">This book has NOT BEEN read</p>
+            <p id="card-author">Author: Ukandu Giddel</p>
+            <p id="card-pages">Pages: 563</p>
+            <p id="read-status">Read status: This book has NOT BEEN read</p>
             <div id="actions">
               <button id="delete-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -49,12 +50,12 @@
               <button id="toggle-button">Toggle read status</button>
             </div>
           </div>
-
-           <div id="card">
+          <div id="card">
             <p id="card-name">How to get better at coding.</p>
             <hr />
-            <p id="card-author">Ukandu Giddel</p>
-            <p id="read-status">This book has NOT BEEN read</p>
+            <p id="card-author">Author: Ukandu Giddel</p>
+            <p id="card-pages">Pages: 563</p>
+            <p id="read-status">Read status: This book has NOT BEEN read</p>
             <div id="actions">
               <button id="delete-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -67,12 +68,12 @@
               <button id="toggle-button">Toggle read status</button>
             </div>
           </div>
-
-           <div id="card">
+          <div id="card">
             <p id="card-name">How to get better at coding.</p>
             <hr />
-            <p id="card-author">Ukandu Giddel</p>
-            <p id="read-status">This book has NOT BEEN read</p>
+            <p id="card-author">Author: Ukandu Giddel</p>
+            <p id="card-pages">Pages: 563</p>
+            <p id="read-status">Read status: This book has NOT BEEN read</p>
             <div id="actions">
               <button id="delete-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -85,84 +86,12 @@
               <button id="toggle-button">Toggle read status</button>
             </div>
           </div>
-
-           <div id="card">
+          <div id="card">
             <p id="card-name">How to get better at coding.</p>
             <hr />
-            <p id="card-author">Ukandu Giddel</p>
-            <p id="read-status">This book has NOT BEEN read</p>
-            <div id="actions">
-              <button id="delete-btn">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path
-                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
-                  />
-                </svg>
-                Delete
-              </button>
-              <button id="toggle-button">Toggle read status</button>
-            </div>
-          </div>
-
-           <div id="card">
-            <p id="card-name">How to get better at coding.</p>
-            <hr />
-            <p id="card-author">Ukandu Giddel</p>
-            <p id="read-status">This book has NOT BEEN read</p>
-            <div id="actions">
-              <button id="delete-btn">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path
-                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
-                  />
-                </svg>
-                Delete
-              </button>
-              <button id="toggle-button">Toggle read status</button>
-            </div>
-          </div>
-
-           <div id="card">
-            <p id="card-name">How to get better at coding.</p>
-            <hr />
-            <p id="card-author">Ukandu Giddel</p>
-            <p id="read-status">This book has NOT BEEN read</p>
-            <div id="actions">
-              <button id="delete-btn">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path
-                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
-                  />
-                </svg>
-                Delete
-              </button>
-              <button id="toggle-button">Toggle read status</button>
-            </div>
-          </div>
-
-           <div id="card">
-            <p id="card-name">How to get better at coding.</p>
-            <hr />
-            <p id="card-author">Ukandu Giddel</p>
-            <p id="read-status">This book has NOT BEEN read</p>
-            <div id="actions">
-              <button id="delete-btn">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path
-                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
-                  />
-                </svg>
-                Delete
-              </button>
-              <button id="toggle-button">Toggle read status</button>
-            </div>
-          </div>
-
-           <div id="card">
-            <p id="card-name">How to get better at coding.</p>
-            <hr />
-            <p id="card-author">Ukandu Giddel</p>
-            <p id="read-status">This book has NOT BEEN read</p>
+            <p id="card-author">Author: Ukandu Giddel</p>
+            <p id="card-pages">Pages: 563</p>
+            <p id="read-status">Read status: This book has NOT BEEN read</p>
             <div id="actions">
               <button id="delete-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
