--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         </div>
       </div>
     </div>
+    <div id="footer"><p>Created by Giddel, Copyright &#169 2024</p></div>
     <script src="js/index.js"></script>
   </body>
 </html>
